# ForkOfOnDeviceTraining

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  devenv.nix  devenv.yaml  ize_t i = 0; i < numberOfValues; i++) {  pyproject.toml
.jjconflict-side-0/examples/mixed_width_mlp/: CMakeLists.txt
examples/binary_classifier/: CMakeLists.txt  next_try_with_this_dataset.c  prepare_SPEECH_COMMANDS_data_one_label.py  prepare_YES_NO_data_first_label.py  prepare_YES_NO_data_multi_label.py  prepare_audio_data.py  train_SPEECH_COMMANDS_c.c  train_SPEECH_COMMANDS_c_NEW.c  train_YES_NO_c.c  train_pytorch.py
examples/ecg_anomaly_ae/: CMakeLists.txt  README.md  compare.py  train_c.c  train_pytorch.py
examples/ecg_anomaly_ae_v2/: CMakeLists.txt  train_c.c
examples/har_classifier/: CMakeLists.txt  README.md  analyze_deadzone.py  binary_classifier_train_c.c  compare.py  compare_continual.py  compare_memory.py  mem_instrument.c  mem_instrument.h  optuna.py  optuna_study.py  plot.py  plot_continual.py  prepare_domains.py  run_matrix.py  train_c.c  train_c_adamw.c  train_c_continual.c  train_c_delta.c  train_c_sym.c  train_pytorch.py  write_done.py
examples/kws_raw/: CMakeLists.txt  README.md  trace_c.c  trace_pytorch.py  train_c.c  train_pytorch.py
experiments/: CMakeLists.txt  MnistExperiment.c  MnistExperimentLog.csv
src/arithmetic/: Add.c  Arithmetic.c  ArithmeticType.c  Axpby.c  CMakeLists.txt  Comparison.c  Conv1dKernel.c  ConvTranspose1dKernel.c  Distributions.c  Div.c  ExecuteOp.c  JacobiEig.c  Kernel.c  Log.c  Matmul.c  MinMax.c  Mul.c  PointwiseFused.c  Reduce.c  Rounding.c  RowBroadcast.c  SlidingWindow1d.c  Square.c  Sub.c  Sum.c
src/arithmetic/include/: Add.h  ArithmeticType.h  Axpby.h  Comparison.h  Conv1dKernel.h  ConvTranspose1dKernel.h  Distributions.h  Div.h  ExecuteOp.h  JacobiEig.h  Kernel.h  Log.h  Matmul.h  MinMax.h  PointwiseFused.h  Reduce.h  Rounding.h  RowBroadcast.h  SlidingWindow1d.h  Sub.h  Sum.h
src/common/: CMakeLists.txt
src/common/include/: Common.h
src/continual_learning/: CMakeLists.txt  PpcaReplay.c  PpcaReplaySerialize.c
src/continual_learning/include/: PpcaReplay.h  PpcaReplaySerialize.h
src/data_loader/: CMakeLists.txt  DataLoader.c  MnistNPYLoader.c  NPYLoader.c
src/data_loader/include/: DataLoader.h  Dataset.h  MnistNPYLoader.h  NPYLoader.h
src/layer/: AdaptiveAvgPool1d.c  AvgPool1d.c  CMakeLists.txt  Conv1d.c  Conv1dTransposed.c  Dropout.c  Flatten.c  GroupNorm.c  Layer.c  LayerNorm.c  Linear.c  MaxPool1d.c  QuantizationLayer.c  Relu.c  Softmax.c
src/layer/include/: AdaptiveAvgPool1d.h  AvgPool1d.h  Conv1d.h  Conv1dTransposed.h  Dropout.h  Layer.h  LayerNorm.h  Linear.h  MaxPool1d.h  QuantizationLayer.h  Relu.h  Softmax.h
src/optimizer/: AdamW.c  CMakeLists.txt  LrScheduler.c  Optimizer.c  Sgd.c
src/optimizer/include/: AdamW.h  LrScheduler.h  Optimizer.h  Sgd.h
src/serial/: CMakeLists.txt  Deserialize.c  DeserializeInternal.h  SerialWire.c  Serialize.c  SerializeInternal.h
src/serial/include/: Deserialize.h  SerialWire.h  Serialize.h
src/userAPI/: CMakeLists.txt  InferenceAPI.c  LinearAPI.c  OptimizerAPI.c  QuantizationAPI.c  SgdAPI.c  StorageAPI.c  TensorAPI.c  TrainingAPI.c
src/userAPI/data_loader/: CMakeLists.txt  DataLoaderAPI.c  DatasetAPI.c  MnistNPYLoaderAPI.c
src/userAPI/data_loader/include/: DataLoaderAPI.h  DatasetAPI.h  MnistNPYLoaderAPI.h
src/userAPI/include/: TrainingAPI.h
src/userAPI/layer/: CMakeLists.txt  LinearAPI.c  ReluAPI.c  SoftmaxAPI.c
src/userAPI/optimizer/: CMakeLists.txt
src/userAPI/tensor/: CMakeLists.txt
src/userAPI/tensor/include/: QuantizationAPI.h
src/userApi/: CMakeLists.txt  InferenceApi.c  LayerCommon.c  LayerConfigAccess.c  LayerQuant.c  LayerWeightsApi.c  MemProfile.c  ModelValidationApi.c  StateDictApi.c  StorageApi.c  TrainingApi.c  TrainingApiInternal.h
src/userApi/continual_learning/: CMakeLists.txt  ExemplarBuffer.c  PpcaReplayApi.c  ReplayDataLoader.c
src/userApi/data_loader/: DataLoaderApi.c  DataLoaderApiInternal.h  NPYLoaderApi.c  NPYLoaderApiInternal.h
src/userApi/include/: InferenceApi.h  LayerCommon.h  LayerQuant.h  MemProfile.h  ModelValidationApi.h  StateDictApi.h  StorageApi.h  TrainingApi.h
src/userApi/layer/: AdaptivePool1dApi.c  CMakeLists.txt  Conv1dApi.c  Conv1dTransposedApi.c  DropoutApi.c  FlattenApi.c  LayerNormApi.c  LinearApi.c  Pool1dApi.c  QuantLayerApi.c  ReluApi.c  SoftmaxApi.c
src/userApi/layer/include/: Conv1dApi.h  (+8 more)
src/userApi/optimizer/: AdamWApi.c  CMakeLists.txt  OptimizerApi.c  SgdApi.c
src/userApi/tensor/: CMakeLists.txt  QuantizationApi.c  QuantizationApiInternal.h  TensorApi.c  TensorApiInternal.h
src/userApi/training_loop/: CMakeLists.txt  TrainingLoopApi.c  TrainingLoopApiInternal.h
test/unit/arithmetic/: CMakeLists.txt  UnitTestAdd.c  UnitTestArithmetic.c  UnitTestArithmeticType.c  UnitTestAxpby.c  UnitTestConv1dKernel.c  UnitTestConvTranspose1dKernel.c  UnitTestDistributions.c  UnitTestDiv.c  UnitTestExecuteOp.c  UnitTestJacobiEig.c  UnitTestKernel.c  UnitTestMatmul.c  UnitTestPointwiseFused.c  UnitTestReduce.c  UnitTestRounding.c  UnitTestRowBroadcast.c  UnitTestSlidingWindow1d.c  UnitTestSquare.c  UnitTestSub.c  generate_expected_conv1d_kernel.py  generate_expected_conv_transpose_1d_kernel.py  generate_expected_pointwise_fused.py
test/unit/continual_learning/: CMakeLists.txt  UnitTestPpcaReplay.c  UnitTestPpcaReplaySerialize.c  UnitTestReplayDataLoader.c
test/unit/layer/: CMakeLists.txt  UnitTestAdaptiveAvgPool1d.c  UnitTestAvgPool1d.c  UnitTestConv1d.c  UnitTestConv1dTransposed.c  UnitTestDropout.c  UnitTestFlatten.c  UnitTestGroupNorm.c  UnitTestLayerNorm.c  UnitTestLinear.c  UnitTestMaxPool1d.c  UnitTestQuantizationLayer.c  UnitTestRelu.c  UnitTestSoftmax.c  generate_expected_adaptive_avg_pool_1d.py  generate_expected_avg_pool_1d.py  generate_expected_conv1d.py  generate_expected_conv1d_transposed.py  generate_expected_layernorm.py  generate_expected_layernorm_sym.py  generate_expected_layernorm_sym_bwd.py  generate_expected_max_pool_1d.py
test/unit/support/: CMakeLists.txt
(+375 files in other folders)
